# tonGraph

./: .gitignore  alarm_skip_seed_p4  build  crash-00013cf1fc2878a1fbf34bbb3aee8d4e7f021b55  crash-12b7e97702d6fc22e6a9ecbd99a648d1947c70a2  crash-2f287b854843c7401cc8360405722121150819f8  crash-3f1b95fd39bb538d2b4fda4e5a729f4bdfa73f98  crash-61351e8f3f31f15e5a5c5ae6ba2c73b869e81719  crash-64be6dd5c724c9aa51b0a22e8c968456b411fafa  crash-c90e9ca1e60cc79f34cebdcee8b3307c0f844863  crash-d22df0f3f85eea7fce8977c0c14752198fc7e41f  crash-d79e700c05878b8b29c7aa6968f83f59b90e856e  crash-e166932d8da213ac14b4086d701133e2c54fbe9d  crash-ed1d0d5b6b1d55fa4a3dfa8061c71e6aeb0b27fa  res_exhaust_seed_p5  state_div_seed_p4
contest/: CYPHER_QUERIES.md  FUZZING_PHASE1.md  FUZZING_PHASE2.md  FUZZING_PHASE3.md  GRAPH_LOGGING.md  SIMULATION.md  VULNERABILITIES.md
contest/setups/: SETUP_CORPUS_SYNC.md  SETUP_WINDOWS.md  SETUP_WSL.md
graph-docs/: CPP_LOGGING.md  CYPHER_QUERIES.md  FIRST_CHAT.md  FUZZING_DISTRIBUTED.md  FUZZING_PHASE2.md  FUZZING_PHASE3.md  FUZZING_PHASE4.md  FUZZING_PLAN.md  GRAPH_LOGGING.md  INTEGRATION_TEST_WSL.md  SIMULATION.md  VULNERABILITIES.md
graph-docs/setups/: SETUP_CORPUS_SYNC.md  SETUP_SSH_SYNC.md
simulation/: CMakeLists.txt  POC.md  fuzz_harness.cpp  query.mjs  relay.mjs  req_flood_seed_p5  run_fuzz_p5.sh  run_fuzz_p5_yoga.sh
simulation/corpus_fuzz/: dual_cert_n3_l0_A1_B1_p01  dual_cert_n3_l0_A1_B1_p10  dual_cert_n3_l1_A1_B1_p01  dual_cert_n3_l1_A1_B1_p10  dual_cert_n3_l2_A1_B1_p01  dual_cert_n3_l2_A1_B1_p10  dual_cert_n4_l0_A1_B2_p011  dual_cert_n4_l0_A1_B2_p101  dual_cert_n4_l0_A1_B2_p110  dual_cert_n4_l0_A2_B1_p001  dual_cert_n4_l0_A2_B1_p010  dual_cert_n4_l0_A2_B1_p100  dual_cert_n4_l1_A1_B2_p011  dual_cert_n4_l1_A1_B2_p101  dual_cert_n4_l1_A1_B2_p110  dual_cert_n4_l1_A2_B1_p001  dual_cert_n4_l1_A2_B1_p010  dual_cert_n4_l1_A2_B1_p100  dual_cert_n4_l2_A1_B2_p011  dual_cert_n4_l2_A1_B2_p101  dual_cert_n4_l2_A1_B2_p110  dual_cert_n4_l2_A2_B1_p001  dual_cert_n4_l2_A2_B1_p010  dual_cert_n4_l2_A2_B1_p100  dual_cert_n4_l3_A1_B2_p011  dual_cert_n4_l3_A1_B2_p101  dual_cert_n4_l3_A1_B2_p110  dual_cert_n4_l3_A2_B1_p001  dual_cert_n4_l3_A2_B1_p010  dual_cert_n4_l3_A2_B1_p100  dual_cert_n5_l0_A1_B3_p0111  dual_cert_n5_l0_A1_B3_p1011  dual_cert_n5_l0_A1_B3_p1101  dual_cert_n5_l0_A1_B3_p1110  dual_cert_n5_l0_A3_B1_p0001  dual_cert_n5_l0_A3_B1_p0010  dual_cert_n5_l0_A3_B1_p0100  dual_cert_n5_l0_A3_B1_p1000  dual_cert_n5_l1_A1_B3_p0111  dual_cert_n5_l1_A1_B3_p1011  (+236 more)
simulation/corpus_p4a/: 3344.seeds  3359.seeds  3361.seeds  3364.seeds  3365.seeds  3368.seeds  3370.seeds  3371.seeds  3372.seeds  723.seeds  783.seeds  813.seeds  826.seeds  831.seeds  832.seeds  837.seeds  839.seeds  841.seeds  amnesia_seed_p4
simulation/corpus_p5/: msg_flood_seed_p5
simulation/corpus_p5_seeds/: cert_seed_p5
simulation/crashes_p4a/: crash-df5abb8971035b1c52c45cce2cd83bc2ccb1a3f7
simulation/crashes_p5/: crash-001f8c4832810fc86e3ede70d0933e3588f8f5f4  crash-0023c76ef35c64b6a4ab93fbc27a8ebaa7484a32  crash-002ccaf21485019a0be179479ebf8cd1481e6ac8  crash-0033b74d0cb8e2a6e124b343a1063b316f3afc67  crash-0033dd1f314c3aa731780d2a49a3e7894e890d23  crash-0037eeedd4e042fe29adb620a10edc8dbb6bcb2a  crash-004830f9107c14c916112e1bb208539d9dd94d91  crash-0053206208c817f048b250b3ae740f23170a5d41  crash-00555e27c9895a6a00c60e1b88c4b1cc93b66466  crash-005a64ec582573862cfcdd4fa3309a5d9bbe0dfb  crash-00624d32b19eefa060f929027237f292291bdb67  crash-006ba0ae2651b6835a34acb5020c86007d09c527  crash-006faa99b415f6efb0681e9290d337bbae0261fe  crash-00720ae434629c9b0d2edec5a09307fe1ac7f3e0  crash-007a75f61f252a2b14826550b2877be82456d2f5  crash-007bfe9b79c4b45d26ebd5b1ec1d4b0fe13e794c  crash-0082fd0791743c93d75fb622862b05df97e40aa0  crash-0084f4379b9437bff07a363fa1b5e02c11938759  crash-00a10c05a31042f1fa3c5b84e22d099a7e83821e  crash-00c85cd7a441b89eabfb98cb97d43e6ab7f467d2  crash-00f73cc03106a1baf6da7756c02bbf2538daa227  crash-00fbe591064b8131ad14e2fdac8deff0365da6f2  crash-010d3ff1265ab1752ee1d5515b582ac45d73ef28  crash-010e593e15480e8ba577bade0201368d6f427717  crash-0125d65bab69969bb06d1993197c0ad241c34b15  crash-012e6461a7e6df2e951407f8f517110e9c73186b  crash-0146498f6bbd273df0d58b9f1c5a78fe54243234  crash-01481b85acc961e88a6256a7fd8b033d45e4b542  crash-0157ea6c6e200be873523752f375de3b2448f0fa  crash-0160209ef533210509680dfd777fce8c40730320  crash-0165b8fd6ff588b900bd0567ec15d55a16d0ce97  crash-016f523714ebacabf515dc424192f46713a63859  crash-017c21d12ec9646301402708e15ab9be9932422d  crash-0194c4b55095d1441790bec26f7ecf78160ea6bd  crash-01ad8647de5ded342b25dc93688e49a725dad210  crash-01b193f462e19395606a3f13d2c5bb73606e29bd  crash-01bcb9f9360caf7cb3fa295bcf82551941d64d81  crash-01de5ba23ac7a0bbc9e667f9b16c4a0c3b7c6548  crash-01eb59d55f14f7dce91d0d2f138ac31ac6bc2c04  crash-01eba7da5f3923cf6760cfad916570d57299f6e0  (+7254 more)
simulation/scripts/: fuzz_status.sh  fuzz_watch.sh  gen_targeted_corpus.py  sync_p4a.sh  sync_p4b.sh  sync_p5.sh
test/consensus/: CMakeLists.txt  fuzz_pool.cpp  fuzz_tl.cpp  test-consensus.cpp  test_amnesia_poc.cpp
test/integration/: test_basic.py
tl/generate/scheme/: ton_api.tl
ton/: ton-tl.hpp
validator/: CMakeLists.txt  manager-init.cpp  manager.cpp  manager.hpp
validator-engine/: validator-engine.cpp
validator/consensus/: block-accepter.cpp  block-producer.cpp  bridge.cpp  types.cpp  types.h
validator/consensus/simplex/: bus.cpp  bus.h  candidate-resolver.cpp  consensus.cpp  db.cpp  pool.cpp
validator/db/: rootdb.cpp
(+1 files in other folders)
